--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -2199,5 +2199,15 @@ config MFD_RSMU_SPI
 	  Additional drivers must be enabled in order to use the functionality
 	  of the device.
 
+config CONFIG_MFD_MLILABS_EMC
+	tristate "MLI-Labs Embedded Management Controller (EMC)"
+	depends on RUST && I2C && OF
+	help
+	  Support for the MLI-Labs Embedded Management Controller (EMC),
+	  connected via I2C.
+
+	  Provides a watchdog, RTC with alarm, battery interface, charger
+	  interface, GPIO extender, power management and reset controller.
+
 endmenu
 endif
